# BioBizz_Calculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
inc/: week_1.h  week_10.h  week_11.h  week_12.h  week_2.h  week_3.h  week_4.h  week_5.h  week_6.h  week_7.h  week_8.h  week_9.h
include/: week_1.h  week_10.h  week_11.h  week_12.h  week_2.h  week_3.h  week_4.h  week_5.h  week_6.h  week_7.h  week_8.h  week_9.h
src/: week_1.cpp  week_10.cpp  week_11.cpp  week_12.cpp  week_2.cpp  week_3.cpp  week_4.cpp  week_5.cpp  week_6.cpp  week_7.cpp  week_8.cpp  week_9.cpp
